back to java 17 (for now) added jenv .java-version file